Fix overflow bugs

--- a/game-website/frontend/src/Components/Post/Post.css
+++ b/game-website/frontend/src/Components/Post/Post.css
@@ -19,6 +19,7 @@
 }
 
 .message{
+    overflow:auto;
     font-family: 'Mulish', sans-serif;
     font-size: 1.2rem;
 }
